TP6/tp06-ex01/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = local.vpc_cidr
  enable_dns_hostnames = true

  tags = {
    Name = "${local.name}-vpc"
  }
}
